Fixed image display

--- a/Tutorials/Tutorial_0_Getting_Started.ipynb
+++ b/Tutorials/Tutorial_0_Getting_Started.ipynb
@@ -37,7 +37,7 @@
    "id": "906b7b33",
    "metadata": {},
    "source": [
-    "<img src=\"files/Julia.png\" style=\"width: 625px; height: auto\" align=\"left\">"
+    "<img src=\"./files/Julia.png\" style=\"width: 625px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "id": "50fe200d",
    "metadata": {},
    "source": [
-    "<img src=\"files/addIJulia.png\" style=\"width: 625px; height: auto\" align=\"left\">"
+    "<img src=\"./files/addIJulia.png\" style=\"width: 625px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -69,7 +69,7 @@
    "id": "19041fe1",
    "metadata": {},
    "source": [
-    "<img src=\"files/addGenX.png\" style=\"width: 625px; height: auto\" align=\"left\">"
+    "<img src=\"./files/addGenX.png\" style=\"width: 625px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "id": "af32af4d",
    "metadata": {},
    "source": [
-    "<img src=\"files/opennotebook.png\" style=\"width: 625px; height: auto\" align=\"left\">"
+    "<img src=\"./files/opennotebook.png\" style=\"width: 625px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "id": "97b2b84b",
    "metadata": {},
    "source": [
-    "<img src=\"files/jupyter_screen.png\" style=\"width: 825px; height: auto\" align=\"left\">"
+    "<img src=\"./files/jupyter_screen.png\" style=\"width: 825px; height: auto\" align=\"left\">"
    ]
   },
   {
