--- a/Tutorials/Tutorial_2_Network_Visualization.ipynb
+++ b/Tutorials/Tutorial_2_Network_Visualization.ipynb
@@ -98,7 +98,7 @@
    "id": "6a52eb00",
    "metadata": {},
    "source": [
-    "<img src=\"files/new_england.png\" style=\"width: 600px; height: auto\" align=\"left\">"
+    "<img src=\"./files/new_england.png\" style=\"width: 600px; height: auto\" align=\"left\">"
    ]
   },
   {
