--- a/Tutorials/Tutorial_4_Model_Generation.ipynb
+++ b/Tutorials/Tutorial_4_Model_Generation.ipynb
@@ -49,7 +49,7 @@
    "id": "3156389f",
    "metadata": {},
    "source": [
-    "<img src=\"files/jump_logo.png\" style=\"width: 450px; height: auto\" align=\"left\">"
+    "<img src=\"./files/jump_logo.png\" style=\"width: 450px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -344,7 +344,7 @@
    "id": "a2ff61f5",
    "metadata": {},
    "source": [
-    "<img src=\"files/LatexHierarchy.png\" style=\"width: 650px; height: auto\" align=\"left\">"
+    "<img src=\"./files/LatexHierarchy.png\" style=\"width: 650px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -360,7 +360,7 @@
    "id": "9fc15b3b",
    "metadata": {},
    "source": [
-    "<img src=\"files/OneZoneCase.png\" style=\"width: auto; height: 500px\" align=\"left\">"
+    "<img src=\"./files/OneZoneCase.png\" style=\"width: auto; height: 500px\" align=\"left\">"
    ]
   },
   {
