--- a/Tutorials/Tutorial_5_Solve_Model.ipynb
+++ b/Tutorials/Tutorial_5_Solve_Model.ipynb
@@ -21,7 +21,7 @@
    "id": "8b7ec72c",
    "metadata": {},
    "source": [
-    "<img src=\"files/runcase.png\" style=\"width: 805px; height: auto\" align=\"left\">"
+    "<img src=\"./files/runcase.png\" style=\"width: 805px; height: auto\" align=\"left\">"
    ]
   },
   {
@@ -627,58 +627,16 @@
    "id": "0635a527",
    "metadata": {},
    "source": [
-    "In this case, the infeasibility was detected on the presovle since it's clear no solution would fit within all constraints. For information on how to debug an infeasible solution, see the <a href=\"https://jump.dev/JuMP.jl/stable/manual/solutions/#Conflicts\" target=\"_blank\">JuMP documentaion</a>. Add -- some solvers will compute conflict"
+    "In this case, the infeasibility was detected on the presovle since it's clear no solution would fit within all constraints. For information on how to debug an infeasible solution, see the <a href=\"https://jump.dev/JuMP.jl/stable/manual/solutions/#Conflicts\" target=\"_blank\">JuMP documentaion</a>. Some solvers, such as Gurobi, will compute what is causing the conflict, e.g. which constraints are infeasible with one another (HiGHS does not do this). "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d297d7c0",
+   "id": "f61cac91",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "value.(EP[:eTotalCap])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99a810e3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs[\"dfGen\"][:,:Resource_Type]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27c8ec05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "setup[\"CO2Cap\"]=1;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4172ee55",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inputs[\"dfCO2Cap\"].CO_2_Max_tons_MWh_1.=0.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8a4759e0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "EP = "
-   ]
+   "source": []
   }
  ],
  "metadata": {
