--- a/Tutorials/Tutorial_6_Solver_Settings.ipynb
+++ b/Tutorials/Tutorial_6_Solver_Settings.ipynb
@@ -188,7 +188,7 @@
    "id": "0d29fa11",
    "metadata": {},
    "source": [
-    "<img src=\"files/highs_defaults.png\" style=\"width: auto; height: 500px\" align=\"left\">\n",
+    "<img src=\"./files/highs_defaults.png\" style=\"width: auto; height: 500px\" align=\"left\">\n",
     "\n"
    ]
   },
@@ -828,22 +828,6 @@
    "source": [
     "solution5 = @elapsed GenX.solve_model(EP5,setup)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "be1218ea",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ab1aafe4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
