Final commit for v0.3.6

--- a/Tutorials/Tutorial_0_Getting_Started.ipynb
+++ b/Tutorials/Tutorial_0_Getting_Started.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ad8c966a",
+   "metadata": {},
+   "source": [
+    "_For GenX v0.3.6_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5fe615ef",
    "metadata": {},
    "source": [
@@ -61,7 +69,7 @@
    "id": "d1dba53d",
    "metadata": {},
    "source": [
-    "Next, add the GenX package by pressing the \"]\" key and typing `add https://github.com/GenXProject/GenX.git`"
+    "Next, add the GenX package by pressing the \"]\" key and typing `add https://github.com/GenXProject/GenX.git`. __This is for GenX v0.3.6 and older. For newer versions of GenX, see the updated Tutorials."
    ]
   },
   {
