--- a/Tutorials/Tutorial_2_Network_Visualization.ipynb
+++ b/Tutorials/Tutorial_2_Network_Visualization.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66568545",
+   "metadata": {},
+   "source": [
+    "_For GenX v0.3.6_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71b0f263",
    "metadata": {},
    "source": [
@@ -102,9 +110,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b9ed70da",
+   "metadata": {},
+   "source": [
+    "__Note: Network.csv will look different in updated versions of GenX. For an explanation of the newer Network.csv, see the updated Tutorials.__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d89f8c96",
+   "id": "10bda81d",
    "metadata": {},
    "outputs": [],
    "source": []
