--- a/Tutorials/Tutorial_4_Model_Generation.ipynb
+++ b/Tutorials/Tutorial_4_Model_Generation.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a293d237",
+   "metadata": {},
+   "source": [
+    "_For GenX v0.3.6_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e1dac019",
    "metadata": {},
    "source": [
@@ -76,7 +84,8 @@
    "outputs": [],
    "source": [
     "using JuMP\n",
-    "using HiGHS"
+    "using HiGHS\n",
+    "using GenX"
    ]
   },
   {
@@ -401,16 +410,6 @@
    "metadata": {},
    "source": [
     "To generate the arguments, we have to set a case path (this is set automatically when `Run.jl` is called):"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "8163a1d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using GenX"
    ]
   },
   {
