--- a/Tutorials/Tutorial_5_Solve_Model.ipynb
+++ b/Tutorials/Tutorial_5_Solve_Model.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f73f21ab",
+   "metadata": {},
+   "source": [
+    "_For GenX v0.3.6_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0d97a9c1",
    "metadata": {},
    "source": [
@@ -84,7 +92,8 @@
    "outputs": [],
    "source": [
     "using JuMP\n",
-    "using HiGHS"
+    "using HiGHS\n",
+    "using GenX"
    ]
   },
   {
@@ -277,16 +286,6 @@
    "metadata": {},
    "source": [
     "Let's optimize the GenX model created in the last Tutorial. To do so, we'll create the inputs for `generate_model` and run it. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "a980e3ce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using GenX"
    ]
   },
   {
