--- a/Tutorials/Tutorial_6_Solver_Settings.ipynb
+++ b/Tutorials/Tutorial_6_Solver_Settings.ipynb
@@ -5,7 +5,16 @@
    "id": "388f8773",
    "metadata": {},
    "source": [
+    "\n",
     "# Tutorial 6: Solver Settings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5072a981",
+   "metadata": {},
+   "source": [
+    "_For GenX v0.3.6_"
    ]
   },
   {
@@ -38,7 +47,9 @@
     "using YAML\n",
     "using GenX\n",
     "using JuMP\n",
-    "using DataFrames"
+    "using DataFrames\n",
+    "using Plots\n",
+    "using Plotly"
    ]
   },
   {
@@ -271,18 +282,6 @@
    "outputs": [],
    "source": [
     "DataFrame([tols[2:end] abs.(OV[2:end] .- OV[1]) times[2:end]],[\"Tolerance\", \"Error\", \"Time\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6435ad63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using Plots\n",
-    "using Plotly\n",
-    "import Pkg; Pkg.add(\"PyPlot\")"
    ]
   },
   {
