--- a/Tutorials/Tutorial_5_Solve_Model.ipynb
+++ b/Tutorials/Tutorial_5_Solve_Model.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "10c64a36",
    "metadata": {},
    "outputs": [
@@ -300,66 +300,32 @@
      "output_type": "stream",
      "text": [
       "Configuring Settings\n",
-      "Time Series Data Already Clustered.\n",
-      "Reading Input CSV Files\n",
-      "Network.csv Successfully Read!\n",
-      "Load_data.csv Successfully Read!\n",
-      "Fuels_data.csv Successfully Read!\n",
-      "Generators_data.csv Successfully Read!\n",
-      "Generators_variability.csv Successfully Read!\n",
-      "Validating time basis\n",
-      "Capacity_reserve_margin.csv Successfully Read!\n",
-      "Minimum_capacity_requirement.csv Successfully Read!\n",
-      "Maximum_capacity_requirement.csv Successfully Read!\n",
-      "Energy_share_requirement.csv Successfully Read!\n",
-      "CO2_cap.csv Successfully Read!\n",
-      "CSV Files Successfully Read In From Example_Systems_Tutorials/SmallNewEngland/OneZone\n"
+      "Time Series Data Already Clustered.\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "Dict{Any, Any} with 66 entries:\n",
-       "  \"Z\"                   => 1\n",
-       "  \"LOSS_LINES\"          => [1]\n",
-       "  \"RET_CAP_CHARGE\"      => Int64[]\n",
-       "  \"pC_D_Curtail\"        => [50.0]\n",
-       "  \"dfGen\"               => \u001b[1m4×68 DataFrame\u001b[0m\u001b[0m…\n",
-       "  \"pTrans_Max_Possible\" => [2.95]\n",
-       "  \"pNet_Map\"            => [1.0;;]\n",
-       "  \"omega\"               => [4.01099, 4.01099, 4.01099, 4.01099, 4.01099, 4.0109…\n",
-       "  \"RET_CAP_ENERGY\"      => [4]\n",
-       "  \"RESOURCES\"           => String31[\"natural_gas_combined_cycle\", \"solar_pv\", \"…\n",
-       "  \"COMMIT\"              => [1]\n",
-       "  \"pMax_D_Curtail\"      => [1]\n",
-       "  \"STOR_ALL\"            => [4]\n",
-       "  \"THERM_ALL\"           => [1]\n",
-       "  \"dfCO2CapZones\"       => [1;;]\n",
-       "  \"REP_PERIOD\"          => 11\n",
-       "  \"MinCapReq\"           => [5.0, 10.0, 6.0]\n",
-       "  \"STOR_LONG_DURATION\"  => Int64[]\n",
-       "  \"dfCapRes\"            => [0.156;;]\n",
-       "  \"STOR_SYMMETRIC\"      => [4]\n",
-       "  \"VRE\"                 => [2, 3]\n",
-       "  \"RETRO\"               => Int64[]\n",
-       "  \"THERM_COMMIT\"        => [1]\n",
-       "  \"TRANS_LOSS_SEGS\"     => 1\n",
-       "  \"H\"                   => 168\n",
-       "  ⋮                     => ⋮"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "KeyError: key \"Solver\" not found",
+     "output_type": "error",
+     "traceback": [
+      "KeyError: key \"Solver\" not found",
+      "",
+      "Stacktrace:",
+      " [1] getindex(h::Dict{Any, Any}, key::String)",
+      "   @ Base ./dict.jl:484",
+      " [2] top-level scope",
+      "   @ In[11]:21"
+     ]
     }
    ],
    "source": [
-    "case = joinpath(\"Example_Systems_Tutorials/SmallNewEngland/OneZone\") \n",
+    "case = joinpath(\"example_systems/1_three_zones\") \n",
     "\n",
     "genx_settings = GenX.get_settings_path(case, \"genx_settings.yml\");\n",
-    "setup = GenX.configure_settings(genx_settings);\n",
-    "settings_path = GenX.get_settings_path(case)\n",
+    "writeoutput_settings = GenX.get_settings_path(case, \"output_settings.yml\")\n",
+    "setup = GenX.configure_settings(genx_settings,writeoutput_settings)\n",
     "\n",
+    "settings_path = GenX.get_settings_path(case)\n",
     "### Create TDR_Results\n",
     "TDRpath = joinpath(case, setup[\"TimeDomainReductionFolder\"])\n",
     "\n",
@@ -373,7 +339,8 @@
     "    end\n",
     "end\n",
     "\n",
-    "OPTIMIZER =  GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "\n",
+    "OPTIMIZER =  GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "\n",
     "inputs = GenX.load_inputs(setup, case)"
    ]
