--- a/Tutorials/Tutorial_7_Setup.ipynb
+++ b/Tutorials/Tutorial_7_Setup.ipynb
@@ -260,7 +260,7 @@
     "    end\n",
     "end\n",
     "\n",
-    "OPTIMIZER =  GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "OPTIMIZER =   GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "\n",
     "inputs = GenX.load_inputs(setup, case)"
    ]
@@ -1174,26 +1174,6 @@
    ],
    "source": [
     "CSV.write(joinpath(case,\"CO2_cap.csv\"),CO2Cap2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a36bb6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# CO2 Cap = 1 mass of emissions in tons/MwH, others ratio, see CO2_cap.csv\n",
-    "# try setting the tons to 0, would end up curtailing demand\n",
-    "# -> next, co2 cap slack.csv allows you to violate for a penalty -- carbon tax, used automatically if file is there\n",
-    "# -> print eCTotalCO2CapSlack\n",
-    "# Look at objective value -- millions of dollars\n",
-    "# One case w/o cap but with ESR (renewable portfolio standard in US)\n",
-    "# ESR : percentage of electricity generation that has to come from clean energy sources\n",
-    "# Change colors, NG grey\n",
-    "#setup[\"CO2Cap\"] = 1 # generation + rate-based emission limit constraint\n",
-    "#setup[\"CapacityReserveMargin\"] = 0\n",
-    "#setup[\"EnergyShareRequirement\"] = 0"
    ]
   },
   {
