--- a/Tutorials/Tutorial_6_Solver_Settings.ipynb
+++ b/Tutorials/Tutorial_6_Solver_Settings.ipynb
@@ -122,8 +122,9 @@
     "case = joinpath(\"Example_Systems_Tutorials/SmallNewEngland/OneZone\") \n",
     "\n",
     "genx_settings = GenX.get_settings_path(case, \"genx_settings.yml\");\n",
-    "setup = GenX.configure_settings(genx_settings);\n",
-    "settings_path = GenX.get_settings_path(case)\n"
+    "writeoutput_settings = GenX.get_settings_path(case, \"output_settings.yml\")\n",
+    "setup = GenX.configure_settings(genx_settings,writeoutput_settings) \n",
+    "settings_path = GenX.get_settings_path(case)"
    ]
   },
   {
@@ -143,6 +144,29 @@
     "\n",
     "To set the solver preferences, go into the settings folder of your case and select the YAML file of the solver you're using.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d13445c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "UndefVarError: `case` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `case` not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[1]:1"
+     ]
+    }
+   ],
+   "source": [
+    "settings_folder = cd(readdir,joinpath(case,\"Settings\")) # Print Settings folder"
    ]
   },
   {
@@ -169,9 +193,7 @@
     }
    ],
    "source": [
-    "settings_folder = cd(readdir,joinpath(case,\"Settings\")) # Print Settings folder\n",
-    "\n",
-    "highs_settings = YAML.load(open(joinpath(case,\"Settings/highs_settings.yml\")))\n"
+    "highs_settings = YAML.load(open(joinpath(case,\"Settings/highs_settings.yml\")))"
    ]
   },
   {
@@ -232,9 +254,6 @@
     "# Change tolerance, generate and solve model`\n",
     "tols = [1e-7,1e-5,1e-4,1e-3,1e-2,1e-1]\n",
     "OV = [0.0,0.0,0.0,0.0,0.0,0.0]\n",
-    "times = [0.0,0.0,0.0,0.0,0.0,0.0]\n",
-    "#highs_settings[\"Method\"] = \"ipm\"\n",
-    "#YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
     "\n",
     "for i in range(1,length(tols))\n",
     "    println(\" \")\n",
@@ -245,11 +264,10 @@
     "    highs_settings[\"Feasib_Tol\"] = tols[i]\n",
     "    highs_settings[\"Optimal_Tol\"] = tols[i]\n",
     "    YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
-    "    OPTIMIZER1 = GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "    OPTIMIZER1 =GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "    EP = GenX.generate_model(setup,inputs,OPTIMIZER1)\n",
     "    time = @elapsed GenX.solve_model(EP,setup)\n",
     "    OV[i] = objective_value(EP)\n",
-    "    times[i] = time\n",
     "end\n",
     "\n"
    ]
@@ -296,8 +314,6 @@
     "plotlyjs()\n",
     "Plots.scatter(tols[2:end], abs.(OV[2:end] .- OV[1]),legend=:topleft,\n",
     "                ylabel=\"Error\", xlabel=\"Tolerance\",size=(920,400),label=:\"Error\")\n",
-    "scatter!(twinx(),tols[2:end],times[2:end],color=:red,markeralpha=.5,label=:\"Time\",legend=:topleft,\n",
-    "    yaxis=(label=\"Time\"))\n",
     "ygrid!(:on, :dashdot, 0.1)"
    ]
   },
@@ -387,7 +403,7 @@
    "source": [
     "highs_settings[\"Pre_Solve\"] = \"off\"\n",
     "YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
-    "OPTIMIZER2 = GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "OPTIMIZER2 = GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "EP2 = GenX.generate_model(setup,inputs,OPTIMIZER2)"
    ]
   },
@@ -484,7 +500,7 @@
    "source": [
     "highs_settings[\"Pre_Solve\"] = \"on\"\n",
     "YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
-    "OPTIMIZER3 = GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "OPTIMIZER3 = GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "EP3 = GenX.generate_model(setup,inputs,OPTIMIZER3)"
    ]
   },
@@ -620,7 +636,7 @@
    "source": [
     "highs_settings[\"run_crossover\"] = \"off\"\n",
     "YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
-    "OPTIMIZER4 = GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "OPTIMIZER4 = GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "EP4 = GenX.generate_model(setup,inputs,OPTIMIZER4)"
    ]
   },
@@ -750,7 +766,7 @@
    "source": [
     "highs_settings[\"run_crossover\"] = \"on\"\n",
     "YAML.write_file(joinpath(case,\"Settings/highs_settings.yml\"), highs_settings)\n",
-    "OPTIMIZER5 = GenX.configure_solver(setup[\"Solver\"], settings_path);\n",
+    "OPTIMIZER5 =  GenX.configure_solver(settings_path,HiGHS.Optimizer);\n",
     "EP5 = GenX.generate_model(setup,inputs,OPTIMIZER5)"
    ]
   },
