--- a/Tutorials/Tutorial_2_Network_Visualization.ipynb
+++ b/Tutorials/Tutorial_2_Network_Visualization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fa98763b",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bcaa924c",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "\u001b[36m                                                               9 columns omitted\u001b[0m"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,8 +120,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "fc0f820244604246883d86769d1ee81e",
-   "lastKernelId": "fe2974c1-a6eb-44fd-a055-4ab959e12c31"
+   "lastCommId": null,
+   "lastKernelId": null
   },
   "kernelspec": {
    "display_name": "Julia 1.9.2",
