Fixed links to match new documentation

--- a/Tutorials/Tutorial_0_Getting_Started.ipynb
+++ b/Tutorials/Tutorial_0_Getting_Started.ipynb
@@ -21,7 +21,7 @@
    "id": "283cfb5a",
    "metadata": {},
    "source": [
-    "Running these notebooks follows similar steps to those in the GenX documentation <a href=\"https://genxproject.github.io/GenX/dev/how_to_run_genx/\" target=\"_blank\">here</a>. In this tutorial, we go through setting up GenX on Jupyter and navigating to the `Tutorials` file from there."
+    "Running these notebooks follows similar steps to those in the GenX documentation <a href=\"https://genxproject.github.io/GenX.jl/dev/installation/\" target=\"_blank\">here</a>. In this tutorial, we go through setting up GenX on Jupyter and navigating to the `Tutorials` file from there."
    ]
   },
   {
@@ -61,7 +61,7 @@
    "id": "d1dba53d",
    "metadata": {},
    "source": [
-    "Next, add the GenX package by pressing the \"]\" key and typing `add https://github.com/GenXProject/GenX.git`"
+    "Next, add the GenX package by  typing `Pkg.add(\"GenX\")`"
    ]
   },
   {
