--- a/Tutorials/Tutorial_1_Configuring_Settings.ipynb
+++ b/Tutorials/Tutorial_1_Configuring_Settings.ipynb
@@ -29,7 +29,7 @@
    "id": "69655945",
    "metadata": {},
    "source": [
-    "There are 21 settings available to edit in GenX, found in the file `genx_settings.yml`. These settings are described <a href=\"https://genxproject.github.io/GenX/dev/data_documentation/\" target=\"_blank\">here</a> in the documentation. The file is located in the `Settings` folder in the working directory. To change the location of the file, edit the `settings_path` variable in `Run.jl` within your directory."
+    "There are 21 settings available to edit in GenX, found in the file `genx_settings.yml`. These settings are described <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/model_configuration/#Model-settings-parameters\" target=\"_blank\">here</a> in the documentation. The file is located in the `Settings` folder in the working directory. To change the location of the file, edit the `settings_path` variable in `Run.jl` within your directory."
    ]
   },
   {
@@ -37,7 +37,7 @@
    "id": "6e11cc81",
    "metadata": {},
    "source": [
-    "Most settings are set as either 0 or 1, which correspond to whether or not to include a specifc feature. For example, to use `TimeDomainReduction`, you would set its parameter to 0 within `genx_settings.yml`. If you would like to run GenX without it, you would set its parameter to 1."
+    "Most settings are set as either 0 or 1, which correspond to whether or not to include a specifc feature. For example, to use `TimeDomainReduction`, you would set its parameter to 1 within `genx_settings.yml`. If you would like to run GenX without it, you would set its parameter to 0."
    ]
   },
   {
@@ -137,7 +137,7 @@
    "id": "dcdd15fd",
    "metadata": {},
    "source": [
-    "Since all settings have defaults, you only need to specify the settings you would like to change. In fact, you can leave your settings file completely blank and it will still run! Let's try editing `genx_settings` in `SmallNewEngland/OneZone` to contain no parameters:"
+    "Since all settings have defaults, you only need to specify the settings you would like to change. In fact, you can leave your settings file completely blank and it will still run! Let's try editing `genx_settings` in `example_systems/1_three_zones` to contain no parameters:"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "id": "67a336a9",
    "metadata": {},
    "source": [
-    "Now, we run GenX and output the file `capacity.csv` from the `Results` folder. To do this, we use the function `include`, which takes a .jl file and runs it in Jupyter:"
+    "Now, we run GenX and output the file `capacity.csv` from the `results` folder. To do this, we use the function `include`, which takes a .jl file and runs it in Jupyter:"
    ]
   },
   {
