--- a/Tutorials/Tutorial_2_Network_Visualization.ipynb
+++ b/Tutorials/Tutorial_2_Network_Visualization.ipynb
@@ -13,12 +13,12 @@
    "id": "71b0f263",
    "metadata": {},
    "source": [
-    "To run GenX, there are five mandatory input files: `Fuels_data.csv`, `Network.csv`, `Load_data.csv`, `Generators_variability.csv`, and `Generators_data.csv`. Detailed descriptions of these files can be found <a href=\"https://genxproject.github.io/GenX/dev/data_documentation/\" target=\"_blank\">here</a> in the documentation under \"Inputs\". This tutorial helps visualize the file `Network.csv` using the example system `SmallNewEngland/ThreeZones`."
+    "To run GenX, there are five mandatory input files: `Fuels_data.csv`, `Network.csv`, `Demand_data.csv`, `Generators_variability.csv`, and `Generators_data.csv`. Detailed descriptions of these files can be found <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/model_input/#1-Mandatory-input-data\" target=\"_blank\">here</a> in the documentation. This tutorial helps visualize the file `Network.csv` using the example system `1_three_zones`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fa98763b",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,12 @@
    "id": "d5f37531",
    "metadata": {},
    "source": [
-    "The input file `Network.csv` contains the nodes of your network, how they connect to each other, and some important features about them. Below is the network file for `SmallNewEngland/ThreeZones`:"
+    "The input file `Network.csv` contains the nodes of your <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/model_input/#1.2-Network.csvnetwork\" target=\"_blank\">network</a>, how they connect to each other, and some important features about them. Below is the network file for `1_three_zones`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bcaa924c",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        "\u001b[36m                                                               9 columns omitted\u001b[0m"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
