--- a/Tutorials/Tutorial_4_Model_Generation.ipynb
+++ b/Tutorials/Tutorial_4_Model_Generation.ipynb
@@ -825,7 +825,7 @@
    "id": "b08c6390",
    "metadata": {},
    "source": [
-    "Next, we define the model infrastructure using functions found in `src/core`. These take entries from inputs and setup to create more expressions in our model (EP). To see what the functions do in more detail, see the source code and <a href=\"https://genxproject.github.io/GenX/dev/core/#Discharge\" target=\"_blank\">core documentation</a>."
+    "Next, we define the model infrastructure using functions found in `src/core`. These take entries from inputs and setup to create more expressions in our model (EP). To see what the functions do in more detail, see the source code and <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/core/\" target=\"_blank\">core documentation</a>."
    ]
   },
   {
@@ -884,7 +884,7 @@
    "id": "c0f9189b",
    "metadata": {},
    "source": [
-    "We then define variables and expressions based on the resources in the inputs and setup arguments. The details of these can be found in the `src/resources` folder and the \"Resources\" folder under Model Function Reference in the documentation:"
+    "We then define variables and expressions based on the resources in the inputs and setup arguments. The details of these can be found in the `src/resources` folder and the \"Resources\" folder under \"Model Reference\" in the documentation:"
    ]
   },
   {
@@ -964,7 +964,7 @@
    "id": "117c71c7",
    "metadata": {},
    "source": [
-    "Finally, we define expressions and variables using policies outlined in the inputs. These functions can be found in `src/policies` and in the <a href=\"https://genxproject.github.io/GenX/dev/policies/\" target=\"_blank\">policies documentation</a>:"
+    "Finally, we define expressions and variables using policies outlined in the inputs. These functions can be found in `src/policies` and in the <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/policies/\" target=\"_blank\">policies documentation</a>:"
    ]
   },
   {
@@ -1031,7 +1031,7 @@
    "id": "e7aaf306",
    "metadata": {},
    "source": [
-    "The  <a href=\"https://genxproject.github.io/GenX/dev/objective_function/\" target=\"_blank\">objective</a>  here is to minimize "
+    "The  <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Concept_Overview/objective_function/\" target=\"_blank\">objective</a>  here is to minimize "
    ]
   },
   {
@@ -1063,7 +1063,7 @@
    "id": "681de783",
    "metadata": {},
    "source": [
-    "Our constraint is the <a href=\"https://genxproject.github.io/GenX/dev/power_balance/#Power-Balancewhich \" target=\"_blank\">power balance</a>, which is set here to have to meet the demand of the network. The demand is outlined in the last columns of `Load_data.csv`, and is set to inputs in from the `load_load_data` function within `load_inputs`, used in `run_genx_case`."
+    "Our constraint is the <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Concept_Overview/power_balance/\" target=\"_blank\">power balance</a>, which is set here to have to meet the demand of the network. The demand is outlined in the last columns of `Load_data.csv`, and is set to inputs in from the `load_load_data` function within `load_inputs`, used in `run_genx_case`."
    ]
   },
   {
