--- a/Tutorials/Tutorial_7_Setup.ipynb
+++ b/Tutorials/Tutorial_7_Setup.ipynb
@@ -123,7 +123,7 @@
    "id": "a344fdb3",
    "metadata": {},
    "source": [
-    "The settings we'll focus on here are , `CO2Cap`, `EnergyShareRequirement`, `CapacityReserveMargin`, and `MinCapReq`. Each of these ensures that the environmental impact of the model is taken into account, and are therefore referred to as __policy settings__ . For more information on what each one does, see the <a href=\"https://genxproject.github.io/GenX/dev/policies/\" target=\"_blank\">documentation</a>."
+    "The settings we'll focus on here are , `CO2Cap`, `EnergyShareRequirement`, `CapacityReserveMargin`, and `MinCapReq`. Each of these ensures that the environmental impact of the model is taken into account, and are therefore referred to as __policy settings__ . For more information on what each one does, see the <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/policies/\" target=\"_blank\">documentation</a>."
    ]
   },
   {
@@ -1938,7 +1938,7 @@
    "id": "f6bb5e4f",
    "metadata": {},
    "source": [
-    "Another thing we can do is, instead of demanding that the model 100% meet the CO$_2$ cap, we can add a penalty for if it violates the cap. This lets the system allow some CO$_2$ emmissions if it's determined the cost of the grid with some emmissions is low enough that it will offset the cost from the penalty variable. GenX will automatically incorporate this feature if a file by the name \"CO2_cap_slack.csv\" is in the policies folder of the directory. For more information on other types of policy slack variables in GenX, see the <a href=\"https://genxproject.github.io/GenX/dev/slack_variables_overview/#Policy-Slack-Variables\" target=\"_blank\">documentation</a>."
+    "Another thing we can do is, instead of demanding that the model 100% meet the CO$_2$ cap, we can add a penalty for if it violates the cap. This lets the system allow some CO$_2$ emmissions if it's determined the cost of the grid with some emmissions is low enough that it will offset the cost from the penalty variable. GenX will automatically incorporate this feature if a file by the name \"CO2_cap_slack.csv\" is in the policies folder of the directory. For more information on other types of policy slack variables in GenX, see the <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/slack_variables_overview/#Policy-Slack-Variables\" target=\"_blank\">documentation</a>."
    ]
   },
   {
@@ -3630,7 +3630,7 @@
    "id": "97f6acbf",
    "metadata": {},
    "source": [
-    "Many countries have policies that demand a certain percentage of energy provided to consumers comes from renewable energy (in the US, these are called <a href=\"https://www.eia.gov/energyexplained/renewable-sources/portfolio-standards.php#:~:text=Renewable%20portfolio%20standards%20(RPS)%2C,energy%20sources%20for%20electricity%20generation\" target=\"_blank\">renewable portfolio standards</a>.) In GenX, this policy can be implemented by setting `EnergyShareRequirement` to 1 in the setup, and adding a file called `Energy_share_requirement.csv`."
+    "Many countries have policies that demand a certain percentage of energy provided to consumers comes from renewable energy (in the US, these are called <a href=\"https://www.eia.gov/energyexplained/renewable-sources/portfolio-standards.php#:~:text=Renewable%20portfolio%20standards%20(RPS)%2C,energy%20sources%20for%20electricity%20generation\" target=\"_blank\">renewable portfolio standards</a>.) In GenX, this policy can be implemented by setting <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/policies/#Energy-Share-Requirement \" target=\"_blank\">`Energy_share_requirement`</a> to 1 in the setup, and adding a file called `Energy_share_requirement.csv` to the policies folder."
    ]
   },
   {
@@ -4271,7 +4271,7 @@
    "id": "7a9c96db",
    "metadata": {},
    "source": [
-    "The Energy Share Requriement policy also has the possibiliy to be run with <a href=\"https://genxproject.github.io/GenX/dev/slack_variables_overview/#Policy-Slack-Variables\" target=\"_blank\">slack variables</a>."
+    "The Energy Share Requriement policy also has the possibiliy to be run with <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/slack_variables_overview/#Energy-Share-Requirement\" target=\"_blank\">slack variables</a>."
    ]
   },
   {
@@ -4287,7 +4287,7 @@
    "id": "d24f18b9",
    "metadata": {},
    "source": [
-    "The  <a href=\"https://genxproject.github.io/GenX/dev/policies/#Capacity-Reserve-Margin\" target=\"_blank\">Capacity Reserve Margin</a> constraint demands that a certain amount of energy always be available in each zone, expressed as a fraction of the demand. Once again, we can enforce a Capacity Reserve Margin by setting its option to \"1\" in the setup and adding the relevant file, `Capacity_reserve_margin.csv`."
+    "The  <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/policies/#Capacity-Reserve-Margin\" target=\"_blank\">Capacity Reserve Margin</a> constraint demands that a certain amount of energy always be available in each zone, expressed as a fraction of the demand. Once again, we can enforce a Capacity Reserve Margin by setting its option to \"1\" in the setup and adding the relevant file, `Capacity_reserve_margin.csv`."
    ]
   },
   {
@@ -4852,7 +4852,7 @@
    "id": "7d02c48f",
    "metadata": {},
    "source": [
-    "Capacity Reserve Margin also has the possibiliy to be run with <a href=\"https://genxproject.github.io/GenX/dev/slack_variables_overview/#Policy-Slack-Variables\" target=\"_blank\">slack variables</a>."
+    "Capacity Reserve Margin also has the possibiliy to be run with <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/slack_variables_overview/#Capacity-Reserve-Margin\" target=\"_blank\">slack variables</a>."
    ]
   },
   {
@@ -4868,7 +4868,7 @@
    "id": "2b29e58b",
    "metadata": {},
    "source": [
-    "The last policy we'll talk about is <a href=\"https://genxproject.github.io/GenX/dev/policies/#Minimum-Capacity-Requirement\" target=\"_blank\">Minimum Capacity</a>,  which requires the grid to produce at least a certain amount of energy from renewables, as specified in the input file:"
+    "The last policy we'll talk about is <a href=\"https://genxproject.github.io/GenX.jl/dev/Model_Reference/policies/#Minimum-Capacity-Requirement\" target=\"_blank\">Minimum Capacity</a>,  which requires the grid to produce at least a certain amount of energy from renewables, as specified in the input file:"
    ]
   },
   {
@@ -4917,7 +4917,7 @@
    "id": "de4dcf29",
    "metadata": {},
    "source": [
-    "This policy ensures some renewable energy is used in the grid regardless of emissions constraints. If a fourth column containing price cap requirements exists (not shown above), that column is treated as a <a href=\"https://genxproject.github.io/GenX/dev/slack_variables_overview/#Minimum-Capacity-Requirement\" target=\"_blank\">slack variable</a>."
+    "This policy ensures some renewable energy is used in the grid regardless of emissions constraints. If a fourth column containing price cap requirements exists (not shown above), that column is treated as a <a href=\"https://genxproject.github.io/GenX.jl/dev/User_Guide/slack_variables_overview/#Minimum-Capacity-Requirement\" target=\"_blank\">slack variable</a>."
    ]
   },
   {
