--- a/Tutorials/Tutorial_2_Network_Visualization.ipynb
+++ b/Tutorials/Tutorial_2_Network_Visualization.ipynb
@@ -90,7 +90,7 @@
    "id": "ca18429c",
    "metadata": {},
    "source": [
-    "Columns `Start_Zone` and `End_Zone` specify the network of the three regions. In this case, there are only two network lines, specified in the `Network_Lines` columns. The `Start_Zone` column indicates that the first node, MA, is the source of both lines as both rows have value 1. Rows `z1` and `z2` have values of 2 and 3 in `End_Zone`, which  means both nodes CT and ME recieve energy from node MA. This is also indicated in the column `transmission_path_name'. "
+    "Columns `Start_Zone` and `End_Zone` specify the network of the three regions. In this case, there are only two network lines, specified in the `Network_Lines` columns. The `Start_Zone` column indicates that the first node, MA, is the source of both lines as both rows have value 1. Rows `z1` and `z2` have values of 2 and 3 in `End_Zone`, which  means both nodes CT and ME recieve energy from node MA. This is also indicated in the column `transmission_path_name`. "
    ]
   },
   {
