--- a/Tutorials/Tutorial_8_Outputs.ipynb
+++ b/Tutorials/Tutorial_8_Outputs.ipynb
@@ -37,10 +37,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "23171d38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling DataFrames [a93c6f00-e57d-5684-b7b6-d8193f3e46c0]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GraphRecipes [bd48cda9-67a9-57be-86fa-5b3c104eda73]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling Plots [91a5bcdd-55d7-5caf-9e0b-520d859cae80]\n",
+      "\u001b[33m\u001b[1m┌ \u001b[22m\u001b[39m\u001b[33m\u001b[1mWarning: \u001b[22m\u001b[39mbackend `GR` is not installed.\n",
+      "\u001b[33m\u001b[1m└ \u001b[22m\u001b[39m\u001b[90m@ Plots ~/.julia/packages/Plots/sxUvK/src/backends.jl:43\u001b[39m\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GeometryBasicsExt [b238bd29-021f-5edc-8b0e-16b9cda5f63a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling IJuliaExt [2f4121a4-3b3a-5ce6-9c5e-1f2673ce168a]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.webio.node+json": {
+       "children": [],
+       "instanceArgs": {
+        "namespace": "html",
+        "tag": "div"
+       },
+       "nodeType": "DOM",
+       "props": {},
+       "type": "node"
+      },
+      "text/html": [
+       "<div style=\"padding: 1em; background-color: #f8d6da; border: 1px solid #f5c6cb; font-weight: bold;\">\n",
+       "<p>The WebIO Jupyter extension was not detected. See the\n",
+       "<a href=\"https://juliagizmos.github.io/WebIO.jl/latest/providers/ijulia/\" target=\"_blank\">\n",
+       "    WebIO Jupyter integration documentation\n",
+       "</a>\n",
+       "for more information.\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "WebIO._IJuliaInit()"
+      ]
+     },
+     "metadata": {
+      "application/vnd.webio.node+json": {
+       "kernelId": "ce7288e5-79b6-409f-96bc-e7983a969aa6"
+      }
+     },
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling VegaLite [112f6efa-9a02-5b7d-90c0-432ed331239a]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling FileIOExt [f5f51d8f-5827-5d2e-939b-192fcd6ec70c]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling StatsPlots [f3b207a7-027a-5e70-b257-86293d7955fd]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling GenX [5d317b1e-30ec-4ed6-a8ce-8d2d88d7cfac]\n",
+      "\u001b[36m\u001b[1m[ \u001b[22m\u001b[39m\u001b[36m\u001b[1mInfo: \u001b[22m\u001b[39mPrecompiling StructArraysGPUArraysCoreExt [cbbf52aa-d660-55d4-8a5a-33845bbaa85d]\n"
+     ]
+    }
+   ],
    "source": [
     "using DataFrames\n",
     "using CSV\n",
@@ -55,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7674903f",
    "metadata": {},
    "outputs": [],
@@ -452,6 +509,54 @@
    "metadata": {},
    "source": [
     "The file `power.csv`, shown below,  outputs the power in MW discharged by each node at each time step. Note that if TimeDomainReduction is in use the file will be shorter. The first row states which zone each node is part of, and the total power per year is located in the second row. After that, each row represents one time step of the series."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "75ec1010",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8762×31 Matrix{Any}:\n",
+       " \"Zone\"           1.0        …    3.0            3.0\n",
+       " \"AnnualSum\"      4.55318e7      -1.49433e5     -1.12462e7\n",
+       " \"t1\"             0.0           -39.3077     -1070.0\n",
+       " \"t2\"             0.0           -17.8753     -1012.0\n",
+       " \"t3\"             0.0           -39.3077      -969.0\n",
+       " \"t4\"             0.0        …   -0.0         -947.0\n",
+       " \"t5\"             0.0            -0.0         -944.0\n",
+       " \"t6\"             0.0           -29.9575      -960.0\n",
+       " \"t7\"             0.0            -0.0         -996.0\n",
+       " \"t8\"             0.0            -0.0        -1029.0\n",
+       " \"t9\"          4029.99       …   -0.0        -1083.0\n",
+       " \"t10\"         9718.2            -0.0        -1137.0\n",
+       " \"t11\"        13021.0            -7.39981    -1169.0\n",
+       " ⋮                                     ⋱                   ⋮\n",
+       " \"t8749\"       9233.42       …   -0.0        -1463.0\n",
+       " \"t8750\"       9661.56           -0.0        -1439.0\n",
+       " \"t8751\"       8685.21           -0.0        -1423.0\n",
+       " \"t8752\"       5876.22           -0.0        -1427.0\n",
+       " \"t8753\"       1766.94          -38.7422     -1531.0\n",
+       " \"t8754\"          0.0        …  -39.3077     -1624.0\n",
+       " \"t8755\"          0.0           -39.3077     -1576.0\n",
+       " \"t8756\"          0.0            -4.89472    -1339.0\n",
+       " \"t8757\"          0.0           -39.3077     -1277.0\n",
+       " \"t8758\"          0.0           -39.3077     -1217.0\n",
+       " \"t8759\"          0.0        …  -39.3077     -1154.0\n",
+       " \"t8760\"          0.0            -0.0        -1092.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "power_balance =  CSV.read(joinpath(case,\"results/power_balance.csv\"),DataFrame,missingstring=\"NA\")\n",
+    "Matrix(power_balance)"
    ]
   },
   {
@@ -39076,8 +39181,8 @@
  ],
  "metadata": {
   "@webio": {
-   "lastCommId": "c9776884940443fe821895664cc79eef",
-   "lastKernelId": "fe82fff2-0caf-4b7f-b5d3-a695e9c079f9"
+   "lastCommId": "54e0eec6975741b483d8b64569b813ae",
+   "lastKernelId": "ce7288e5-79b6-409f-96bc-e7983a969aa6"
   },
   "kernelspec": {
    "display_name": "Julia 1.9.2",
