--- a/Tutorials/Tutorial_0_Getting_Started.ipynb
+++ b/Tutorials/Tutorial_0_Getting_Started.ipynb
@@ -111,9 +111,93 @@
    "source": [
     "**For a more detailed explanation of IJulia, Jupyter, and downloading packages, see <a href=\"https://docs.google.com/document/d/1Qb9yQL1McZGCiFb8yoO4Evrh8oATE2Fias_FvuuEirs/edit\" target=\"_blank\">here</a>.**"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "21bd7366",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/results_14\n",
+      "60\n",
+      "/\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/\n"
+     ]
+    }
+   ],
+   "source": [
+    "path = \"/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/results_14\"\n",
+    "println(path)\n",
+    "chop(path)\n",
+    "last_slash = findlast('/',path)\n",
+    "println(last_slash)\n",
+    "println(path[60])\n",
+    "println(path[1:findlast('/',path)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5d51b804",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/results_1\n",
+      "1\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/results_\n",
+      "_\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/results\n",
+      "s\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/result\n",
+      "t\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/resul\n",
+      "l\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/resu\n",
+      "u\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/res\n",
+      "s\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/re\n",
+      "e\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/r\n",
+      "r\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/\n",
+      "/Users/mayamutic/Desktop/GenX/example_systems/1_three_zones/\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = length(path)\n",
+    "while path[i] != '/'\n",
+    "    println(path[i])\n",
+    "    path = path[1:i-1]\n",
+    "    i = length(path)\n",
+    "    println(path)\n",
+    "end\n",
+    "println(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e1871f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Julia 1.9.2",
    "language": "julia",
