Changed name of example file

--- a/Tutorials/Tutorial_7_Setup.ipynb
+++ b/Tutorials/Tutorial_7_Setup.ipynb
@@ -13,7 +13,7 @@
    "id": "d40842fd",
    "metadata": {},
    "source": [
-    "As show in previous tutorials, the settings file can be changed to adapt to a number of different systems. In Tutorial 3, we discussed how the setting Time Domain Reduction can reduce the computation time of the solver. Other settings, however, directly impact the values of the solution itself. This tutorial goes over the policy attributes in the settings and shows how implementing certain policies affects the optimal solution in GenX. To demonstrate these effects, we will be using `example_systems/1_three_zones`."
+    "As show in previous tutorials, the settings file can be changed to adapt to a number of different systems. In Tutorial 3, we discussed how the setting Time Domain Reduction can reduce the computation time of the solver. Other settings, however, directly impact the values of the solution itself. This tutorial goes over the policy attributes in the settings and shows how implementing certain policies affects the optimal solution in GenX. To demonstrate these effects, we will be using `example_systems_tutorials/1_three_zones_tutorials`."
    ]
   },
   {
@@ -62,56 +62,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ee3c113a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Configuring Settings\n"
+     "ename": "LoadError",
+     "evalue": "UndefVarError: `GenX` not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `GenX` not defined",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ In[1]:3"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Dict{Any, Any} with 33 entries:\n",
-       "  \"HydrogenHourlyMatching\"             => 0\n",
-       "  \"NetworkExpansion\"                   => 1\n",
-       "  \"TimeDomainReductionFolder\"          => \"TDR_results\"\n",
-       "  \"WriteOutputs\"                       => \"full\"\n",
-       "  \"SystemFolder\"                       => \"system\"\n",
-       "  \"EnableJuMPStringNames\"              => false\n",
-       "  \"Trans_Loss_Segments\"                => 1\n",
-       "  \"ModelingtoGenerateAlternativeSlack\" => 0.1\n",
-       "  \"PoliciesFolder\"                     => \"policies\"\n",
-       "  \"MultiStage\"                         => 0\n",
-       "  \"ComputeConflicts\"                   => 0\n",
-       "  \"OverwriteResults\"                   => 0\n",
-       "  \"ModelingToGenerateAlternatives\"     => 0\n",
-       "  \"MaxCapReq\"                          => 0\n",
-       "  \"MinCapReq\"                          => 1\n",
-       "  \"CO2Cap\"                             => 2\n",
-       "  \"WriteShadowPrices\"                  => 1\n",
-       "  \"OperationalReserves\"                => 0\n",
-       "  \"ParameterScale\"                     => 1\n",
-       "  \"EnergyShareRequirement\"             => 0\n",
-       "  \"PrintModel\"                         => 0\n",
-       "  \"TimeDomainReduction\"                => 1\n",
-       "  \"DC_OPF\"                             => 0\n",
-       "  \"CapacityReserveMargin\"              => 0\n",
-       "  \"MethodofMorris\"                     => 0\n",
-       "  ⋮                                    => ⋮"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "case = joinpath(\"example_systems/1_three_zones\") \n",
+    "case = joinpath(\"example_systems_tutorials/1_three_zones_tutorials\") \n",
     "\n",
     "genx_settings = GenX.get_settings_path(case, \"genx_settings.yml\");\n",
     "writeoutput_settings = GenX.get_settings_path(case, \"output_settings.yml\")\n",
