--- a/Tutorials/Tutorial_8_Outputs.ipynb
+++ b/Tutorials/Tutorial_8_Outputs.ipynb
@@ -437,14 +437,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "891c2bcc",
-   "metadata": {},
-   "source": [
-    "The file `power.csv`, shown below,  outputs the power in MW discharged by each node at each time step. Note that if TimeDomainReduction is in use the file will be shorter. The first row states which zone each node is part of, and the total power per year is located in the second row. After that, each row represents one time step of the series."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "75ec1010",
@@ -490,6 +482,14 @@
    "source": [
     "power_balance =  CSV.read(joinpath(case,\"results/power_balance.csv\"),DataFrame,missingstring=\"NA\")\n",
     "Matrix(power_balance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "891c2bcc",
+   "metadata": {},
+   "source": [
+    "The file `power.csv`, shown below, contains the power output in MW discharged by each node at each time step. Note that if `TimeDomainReduction` is enabled, the file will have fewer rows compared to the number of time steps in the `system/Demand_data.csv` file. In this case, the corresponding `Demand_data.csv` file that matches the time series in `power.csv` can be found in the `TDR_results` folder. The first row of `power.csv` indicates the zone each node belongs to, while the second row contains the total power per year. Each subsequent row represents one time step in the series."
    ]
   },
   {
